--- a/index.html
+++ b/index.html
@@ -399,8 +399,8 @@
         let isAuthenticated = false;
         let homeworkData = {};
         let config = {
-            githubUsername: 'YOUR_USERNAME', // Replace with your GitHub username
-            repoName: 'homework-planner', // Replace with your repository name
+            githubUsername: 'zmendless', // Replace with your GitHub username
+            repoName: 'homework-calendar', // Replace with your repository name
             githubToken: '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',
             editPassword: 'homework123' // Replace with your desired password
         };
