--- a/index.html
+++ b/index.html
@@ -331,20 +331,20 @@
         </div>
     </div>
 
-    <!-- Add Homework Modal -->
-    <div class="modal" id="homeworkModal">
-        <div class="modal-content">
-            <h2 class="modal-title">Add Homework</h2>
-            <input type="text" id="subjectInput" placeholder="Subject">
-            <input type="text" id="homeworkInput" placeholder="Homework details">
-            <div class="modal-buttons">
-                <button class="cancel-btn" onclick="closeHomeworkModal()">Cancel</button>
-                <button class="confirm-btn" onclick="saveHomework()">Add</button>
-            </div>
+<!-- Add Homework Modal -->
+<div class="modal" id="homeworkModal">
+    <div class="modal-content">
+        <h2 class="modal-title">Add Homework</h2>
+        <input type="text" id="subjectInput" placeholder="Subject">
+        <input type="text" id="homeworkInput" placeholder="Homework details">
+        <div class="modal-buttons">
+            <button class="cancel-btn" onclick="closeHomeworkModal()">Cancel</button>
+            <button class="confirm-btn" onclick="saveHomework()">Add</button>
         </div>
     </div>
+</div>
 
-<!-- Firebase compat -->
+<!-- Firebase compat version -->
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
 
@@ -361,7 +361,7 @@
         measurementId: "G-BKQ7GM54ZZ"
     };
 
-    // Initialize Firebase
+    // Initialize Firebase (compat)
     firebase.initializeApp(firebaseConfig);
     const database = firebase.database();
 
@@ -369,7 +369,7 @@
     let currentWeekOffset = 0;
     let isEditMode = false;
     let currentEditDay = null;
-    const EDIT_PASSWORD = "class2024"; // Change this to your desired password
+    const EDIT_PASSWORD = "class2024";
 
     const daysOfWeek = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday'];
 
@@ -377,10 +377,10 @@
     function getWeekDates(weekOffset = 0) {
         const today = new Date();
         const currentDay = today.getDay();
-        const diff = today.getDate() - currentDay + (currentDay === 0 ? -6 : 1); // Get Monday
+        const diff = today.getDate() - currentDay + (currentDay === 0 ? -6 : 1);
         const monday = new Date(today.setDate(diff));
         monday.setDate(monday.getDate() + (weekOffset * 7));
-        
+
         const weekDates = [];
         for (let i = 0; i < 7; i++) {
             const date = new Date(monday);
@@ -389,6 +389,8 @@
         }
         return weekDates;
     }
+</script>
+
 
         // Format date for display
         function formatDateRange(weekDates) {
