--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
   const app = initializeApp(firebaseConfig);
   const database = getDatabase(app);
 
-  // ← Add these lines
+  // Global variables
   let currentWeekOffset = 0;
   let isEditMode = false;
   let currentEditDay = null;
@@ -442,10 +442,10 @@
             });
         }
 
-        // Load homework from Firebase
+        // Load homework from Firebase - FIXED VERSION
         function loadHomework(dateKey) {
-            const homeworkRef = database.ref(`homework/${dateKey}`);
-            homeworkRef.on('value', (snapshot) => {
+            const homeworkRef = ref(database, `homework/${dateKey}`);
+            onValue(homeworkRef, (snapshot) => {
                 const homeworkList = document.getElementById(`homework-${dateKey}`);
                 if (!homeworkList) return;
                 
@@ -471,22 +471,22 @@
         }
 
         // Change week
-        function changeWeek(direction) {
+        window.changeWeek = function(direction) {
             currentWeekOffset += direction;
             renderWeek();
         }
 
         // Edit mode functions
-        function toggleEditMode() {
+        window.toggleEditMode = function() {
             document.getElementById('passwordModal').classList.add('active');
         }
 
-        function closePasswordModal() {
+        window.closePasswordModal = function() {
             document.getElementById('passwordModal').classList.remove('active');
             document.getElementById('passwordInput').value = '';
         }
 
-        function checkPassword() {
+        window.checkPassword = function() {
             const input = document.getElementById('passwordInput').value;
             if (input === EDIT_PASSWORD) {
                 isEditMode = true;
@@ -500,7 +500,7 @@
             }
         }
 
-        function lockEditMode() {
+        window.lockEditMode = function() {
             isEditMode = false;
             document.getElementById('editBtn').style.display = 'block';
             document.getElementById('lockBtn').style.display = 'none';
@@ -508,25 +508,25 @@
         }
 
         // Homework modal functions
-        function openHomeworkModal(dateKey) {
+        window.openHomeworkModal = function(dateKey) {
             currentEditDay = dateKey;
             document.getElementById('homeworkModal').classList.add('active');
         }
 
-        function closeHomeworkModal() {
+        window.closeHomeworkModal = function() {
             document.getElementById('homeworkModal').classList.remove('active');
             document.getElementById('subjectInput').value = '';
             document.getElementById('homeworkInput').value = '';
             currentEditDay = null;
         }
 
-        function saveHomework() {
+        window.saveHomework = function() {
             const subject = document.getElementById('subjectInput').value.trim();
             const task = document.getElementById('homeworkInput').value.trim();
             
             if (subject && task && currentEditDay) {
-                const homeworkRef = database.ref(`homework/${currentEditDay}`);
-                homeworkRef.push({
+                const homeworkRef = ref(database, `homework/${currentEditDay}`);
+                push(homeworkRef, {
                     subject: subject,
                     task: task,
                     timestamp: Date.now()
@@ -537,9 +537,10 @@
             }
         }
 
-        function deleteHomework(dateKey, homeworkId) {
+        window.deleteHomework = function(dateKey, homeworkId) {
             if (confirm('Are you sure you want to delete this homework?')) {
-                database.ref(`homework/${dateKey}/${homeworkId}`).remove();
+                const homeworkRef = ref(database, `homework/${dateKey}/${homeworkId}`);
+                remove(homeworkRef);
             }
         }
 
