--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework Planner</title>
+    <title>Ödev Planlayıcısı</title>
     <style>
         * {
             margin: 0;
@@ -13,7 +13,7 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
             min-height: 100vh;
             padding: 20px;
         }
@@ -89,7 +89,8 @@
         }
 
         .day-card.today {
-            background: linear-gradient(135deg, #ffeaa7 0%, #fdcb6e 100%);
+            background: linear-gradient(135deg, #ff9a9e 0%, #fecfef 100%);
+            border: 2px solid #ff6b9d;
         }
 
         .day-header {
@@ -186,14 +187,14 @@
 
         .edit-btn, .lock-btn {
             background: white;
-            color: #667eea;
+            color: #6a11cb;
             border: none;
-            border-radius: 30px;
-            padding: 15px 30px;
-            font-size: 1rem;
+            border-radius: 25px;
+            padding: 12px 25px;
+            font-size: 0.95rem;
             font-weight: 600;
             cursor: pointer;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+            box-shadow: 0 4px 15px rgba(0,0,0,0.15);
             transition: all 0.3s;
         }
 
@@ -263,7 +264,7 @@
         }
 
         .modal .confirm-btn {
-            background: #667eea;
+            background: #6a11cb;
             color: white;
         }
 
@@ -301,10 +302,10 @@
 <body>
     <div class="container">
         <header>
-            <h1>📚 Homework Planner</h1>
+            <h1>📚 Ödev Planlayıcısı</h1>
             <div class="week-navigator">
                 <button onclick="changeWeek(-1)">◀</button>
-                <div class="week-display" id="weekDisplay">Loading...</div>
+                <div class="week-display" id="weekDisplay">Yükleniyor...</div>
                 <button onclick="changeWeek(1)">▶</button>
             </div>
         </header>
@@ -314,19 +315,19 @@
         </div>
 
         <div class="edit-controls">
-            <button class="edit-btn" id="editBtn" onclick="toggleEditMode()">🔓 Edit Mode</button>
-            <button class="lock-btn" id="lockBtn" onclick="lockEditMode()" style="display: none;">🔒 Lock</button>
+            <button class="edit-btn" id="editBtn" onclick="toggleEditMode()">🔓 Düzenle</button>
+            <button class="lock-btn" id="lockBtn" onclick="lockEditMode()" style="display: none;">🔒 Kilitle</button>
         </div>
     </div>
 
     <!-- Password Modal -->
     <div class="modal" id="passwordModal">
         <div class="modal-content">
-            <h2 class="modal-title">Enter Password</h2>
-            <input type="password" id="passwordInput" placeholder="Enter password to edit">
+            <h2 class="modal-title">Şifre Girin</h2>
+            <input type="password" id="passwordInput" placeholder="Düzenlemek için şifre girin">
             <div class="modal-buttons">
-                <button class="cancel-btn" onclick="closePasswordModal()">Cancel</button>
-                <button class="confirm-btn" onclick="checkPassword()">Confirm</button>
+                <button class="cancel-btn" onclick="closePasswordModal()">İptal</button>
+                <button class="confirm-btn" onclick="checkPassword()">Onayla</button>
             </div>
         </div>
     </div>
@@ -334,12 +335,12 @@
 <!-- Add Homework Modal -->
 <div class="modal" id="homeworkModal">
     <div class="modal-content">
-        <h2 class="modal-title">Add Homework</h2>
-        <input type="text" id="subjectInput" placeholder="Subject">
-        <input type="text" id="homeworkInput" placeholder="Homework details">
+        <h2 class="modal-title">Ödev Ekle</h2>
+        <input type="text" id="subjectInput" placeholder="Ders">
+        <input type="text" id="homeworkInput" placeholder="Ödev detayları">
         <div class="modal-buttons">
-            <button class="cancel-btn" onclick="closeHomeworkModal()">Cancel</button>
-            <button class="confirm-btn" onclick="saveHomework()">Add</button>
+            <button class="cancel-btn" onclick="closeHomeworkModal()">İptal</button>
+            <button class="confirm-btn" onclick="saveHomework()">Ekle</button>
         </div>
     </div>
 </div>
@@ -368,7 +369,7 @@
   let currentEditDay = null;
   const EDIT_PASSWORD = "class2024";
 
-  const daysOfWeek = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday'];
+  const daysOfWeek = ['Pazartesi', 'Salı', 'Çarşamba', 'Perşembe', 'Cuma', 'Cumartesi', 'Pazar'];
 
     // Get week dates
     function getWeekDates(weekOffset = 0) {
@@ -388,9 +389,9 @@
     }
         // Format date for display
         function formatDateRange(weekDates) {
-            const options = { month: 'short', day: 'numeric' };
-            const start = weekDates[0].toLocaleDateString('en-US', options);
-            const end = weekDates[6].toLocaleDateString('en-US', options);
+            const monthNames = ['Oca', 'Şub', 'Mar', 'Nis', 'May', 'Haz', 'Tem', 'Ağu', 'Eyl', 'Eki', 'Kas', 'Ara'];
+            const start = weekDates[0].getDate() + ' ' + monthNames[weekDates[0].getMonth()];
+            const end = weekDates[6].getDate() + ' ' + monthNames[weekDates[6].getMonth()];
             const year = weekDates[0].getFullYear();
             return `${start} - ${end}, ${year}`;
         }
@@ -427,13 +428,13 @@
                     <div class="day-header">
                         ${daysOfWeek[index]}
                         <span style="font-size: 0.9rem; font-weight: 400;">
-                            (${date.toLocaleDateString('en-US', { month: 'short', day: 'numeric' })})
+                            (${date.getDate()} ${['Oca', 'Şub', 'Mar', 'Nis', 'May', 'Haz', 'Tem', 'Ağu', 'Eyl', 'Eki', 'Kas', 'Ara'][date.getMonth()]})
                         </span>
                     </div>
                     <ul class="homework-list" id="homework-${dateKey}">
-                        <li class="no-homework">Loading...</li>
+                        <li class="no-homework">Yükleniyor...</li>
                     </ul>
-                    ${isEditMode ? `<div class="add-homework" onclick="openHomeworkModal('${dateKey}')">+ Add Homework</div>` : ''}
+                    ${isEditMode ? `<div class="add-homework" onclick="openHomeworkModal('${dateKey}')">+ Ödev Ekle</div>` : ''}
                 `;
                 daysGrid.appendChild(dayCard);
                 
@@ -465,7 +466,7 @@
                         homeworkList.appendChild(li);
                     });
                 } else {
-                    homeworkList.innerHTML = '<li class="no-homework">No homework</li>';
+                    homeworkList.innerHTML = '<li class="no-homework">Ödev yok</li>';
                 }
             });
         }
@@ -495,7 +496,7 @@
                 closePasswordModal();
                 renderWeek();
             } else {
-                alert('Incorrect password!');
+                alert('Yanlış şifre!');
                 document.getElementById('passwordInput').value = '';
             }
         }
@@ -533,12 +534,12 @@
                 });
                 closeHomeworkModal();
             } else {
-                alert('Please fill in both fields!');
+                alert('Lütfen her iki alanı da doldurun!');
             }
         }
 
         window.deleteHomework = function(dateKey, homeworkId) {
-            if (confirm('Are you sure you want to delete this homework?')) {
+            if (confirm('Bu ödevi silmek istediğinizden emin misiniz?')) {
                 const homeworkRef = ref(database, `homework/${dateKey}/${homeworkId}`);
                 remove(homeworkRef);
             }
