--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
-            background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+            background: linear-gradient(135deg, #780000 0%, #c1121f 100%);
             min-height: 100vh;
             padding: 20px;
         }
@@ -29,10 +29,10 @@
         }
 
         h1 {
-            color: white;
+            color: #fdf0d5;
             font-size: 2.5rem;
             margin-bottom: 10px;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
         }
 
         .week-navigator {
@@ -44,24 +44,27 @@
         }
 
         .week-navigator button {
-            background: white;
+            background: #fdf0d5;
             border: none;
             border-radius: 50%;
             width: 40px;
             height: 40px;
             font-size: 1.2rem;
             cursor: pointer;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            color: #003049;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.2);
             transition: transform 0.2s, box-shadow 0.2s;
         }
 
         .week-navigator button:hover {
             transform: scale(1.1);
-            box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+            box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+            background: #669bbc;
+            color: #fdf0d5;
         }
 
         .week-display {
-            color: white;
+            color: #fdf0d5;
             font-size: 1.2rem;
             font-weight: 600;
             min-width: 200px;
@@ -76,35 +79,36 @@
         }
 
         .day-card {
-            background: white;
+            background: #fdf0d5;
             border-radius: 15px;
             padding: 20px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
             transition: transform 0.3s, box-shadow 0.3s;
         }
 
         .day-card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 15px 40px rgba(0,0,0,0.15);
+            box-shadow: 0 15px 40px rgba(0,0,0,0.25);
         }
 
         .day-card.today {
-            background: linear-gradient(135deg, #ff9a9e 0%, #fecfef 100%);
-            border: 2px solid #ff6b9d;
+            background: #669bbc;
+            border: 2px solid #003049;
+            color: #fdf0d5;
         }
 
         .day-header {
             font-size: 1.3rem;
             font-weight: 700;
             margin-bottom: 15px;
-            color: #2d3436;
+            color: #003049;
             padding-bottom: 10px;
-            border-bottom: 2px solid #f0f0f0;
+            border-bottom: 2px solid rgba(0,48,73,0.2);
         }
 
         .day-card.today .day-header {
-            color: #2d3436;
-            border-bottom-color: rgba(255,255,255,0.5);
+            color: #fdf0d5;
+            border-bottom-color: rgba(253,240,213,0.3);
         }
 
         .homework-list {
@@ -112,7 +116,7 @@
         }
 
         .homework-item {
-            background: #f8f9fa;
+            background: rgba(102,155,188,0.1);
             padding: 10px;
             margin-bottom: 10px;
             border-radius: 8px;
@@ -120,30 +124,40 @@
             justify-content: space-between;
             align-items: center;
             transition: background 0.2s;
+            border: 1px solid rgba(0,48,73,0.1);
         }
 
         .day-card.today .homework-item {
-            background: rgba(255,255,255,0.7);
+            background: rgba(253,240,213,0.2);
+            border-color: rgba(253,240,213,0.3);
         }
 
         .homework-item:hover {
-            background: #e9ecef;
+            background: rgba(102,155,188,0.2);
+        }
+
+        .day-card.today .homework-item:hover {
+            background: rgba(253,240,213,0.3);
         }
 
         .homework-text {
             flex: 1;
-            color: #495057;
+            color: #003049;
+        }
+
+        .day-card.today .homework-text {
+            color: #fdf0d5;
         }
 
         .delete-btn {
-            background: #ff6b6b;
-            color: white;
+            background: #c1121f;
+            color: #fdf0d5;
             border: none;
             border-radius: 5px;
             padding: 5px 10px;
             cursor: pointer;
             opacity: 0;
-            transition: opacity 0.2s;
+            transition: opacity 0.2s, background 0.2s;
         }
 
         .homework-item:hover .delete-btn {
@@ -151,29 +165,35 @@
         }
 
         .delete-btn:hover {
-            background: #ee5a6f;
+            background: #780000;
         }
 
         .add-homework {
             width: 100%;
             padding: 10px;
-            background: #e9ecef;
-            border: 2px dashed #ced4da;
+            background: rgba(102,155,188,0.1);
+            border: 2px dashed #669bbc;
             border-radius: 8px;
             cursor: pointer;
-            color: #868e96;
+            color: #003049;
             transition: all 0.2s;
             text-align: center;
+            font-weight: 500;
         }
 
         .add-homework:hover {
-            background: #dee2e6;
-            border-color: #adb5bd;
+            background: rgba(102,155,188,0.2);
+            border-color: #003049;
         }
 
         .day-card.today .add-homework {
-            background: rgba(255,255,255,0.5);
-            border-color: rgba(255,255,255,0.8);
+            background: rgba(253,240,213,0.2);
+            border-color: #fdf0d5;
+            color: #fdf0d5;
+        }
+
+        .day-card.today .add-homework:hover {
+            background: rgba(253,240,213,0.3);
         }
 
         .edit-controls {
@@ -186,26 +206,33 @@
         }
 
         .edit-btn, .lock-btn {
-            background: white;
-            color: #6a11cb;
+            background: #fdf0d5;
+            color: #003049;
             border: none;
             border-radius: 25px;
             padding: 12px 25px;
             font-size: 0.95rem;
             font-weight: 600;
             cursor: pointer;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.15);
+            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
             transition: all 0.3s;
         }
 
         .edit-btn:hover, .lock-btn:hover {
             transform: scale(1.05);
             box-shadow: 0 6px 30px rgba(0,0,0,0.3);
+            background: #669bbc;
+            color: #fdf0d5;
         }
 
         .lock-btn {
-            background: #ff6b6b;
-            color: white;
+            background: #c1121f;
+            color: #fdf0d5;
+        }
+
+        .lock-btn:hover {
+            background: #780000;
+            color: #fdf0d5;
         }
 
         .modal {
@@ -215,7 +242,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: rgba(0,0,0,0.5);
+            background: rgba(0,0,0,0.6);
             justify-content: center;
             align-items: center;
             z-index: 1000;
@@ -226,26 +253,34 @@
         }
 
         .modal-content {
-            background: white;
+            background: #fdf0d5;
             border-radius: 15px;
             padding: 30px;
             min-width: 300px;
-            box-shadow: 0 20px 60px rgba(0,0,0,0.3);
+            box-shadow: 0 20px 60px rgba(0,0,0,0.4);
         }
 
         .modal-title {
             font-size: 1.5rem;
             margin-bottom: 20px;
-            color: #2d3436;
+            color: #003049;
         }
 
         .modal input {
             width: 100%;
             padding: 10px;
-            border: 2px solid #e9ecef;
+            border: 2px solid #669bbc;
             border-radius: 8px;
             font-size: 1rem;
             margin-bottom: 15px;
+            background: rgba(102,155,188,0.05);
+            color: #003049;
+        }
+
+        .modal input:focus {
+            outline: none;
+            border-color: #003049;
+            background: rgba(102,155,188,0.1);
         }
 
         .modal-buttons {
@@ -264,23 +299,33 @@
         }
 
         .modal .confirm-btn {
-            background: #6a11cb;
-            color: white;
+            background: #003049;
+            color: #fdf0d5;
+        }
+
+        .modal .confirm-btn:hover {
+            background: #669bbc;
+            transform: translateY(-2px);
         }
 
         .modal .cancel-btn {
-            background: #e9ecef;
-            color: #495057;
+            background: #c1121f;
+            color: #fdf0d5;
         }
 
-        .modal button:hover {
+        .modal .cancel-btn:hover {
+            background: #780000;
             transform: translateY(-2px);
         }
 
         .no-homework {
-            color: #adb5bd;
+            color: #669bbc;
             font-style: italic;
             padding: 10px;
+        }
+
+        .day-card.today .no-homework {
+            color: rgba(253,240,213,0.7);
         }
 
         @media (max-width: 768px) {
