--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
-            background: linear-gradient(135deg, #780000 0%, #c1121f 100%);
+            background: #f8f8f8;
             min-height: 100vh;
             padding: 20px;
         }
@@ -29,10 +29,10 @@
         }
 
         h1 {
-            color: #fdf0d5;
+            color: #003049;
             font-size: 2.5rem;
             margin-bottom: 10px;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
         }
 
         .week-navigator {
@@ -64,7 +64,7 @@
         }
 
         .week-display {
-            color: #fdf0d5;
+            color: #003049;
             font-size: 1.2rem;
             font-weight: 600;
             min-width: 200px;
@@ -73,22 +73,23 @@
 
         .days-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 25px;
             margin-bottom: 30px;
         }
 
         .day-card {
             background: #fdf0d5;
             border-radius: 15px;
-            padding: 20px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+            padding: 30px;
+            min-height: 400px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
             transition: transform 0.3s, box-shadow 0.3s;
         }
 
         .day-card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 15px 40px rgba(0,0,0,0.25);
+            box-shadow: 0 15px 40px rgba(0,0,0,0.15);
         }
 
         .day-card.today {
@@ -117,14 +118,15 @@
 
         .homework-item {
             background: rgba(102,155,188,0.1);
-            padding: 10px;
-            margin-bottom: 10px;
-            border-radius: 8px;
+            padding: 15px;
+            margin-bottom: 12px;
+            border-radius: 10px;
             display: flex;
             justify-content: space-between;
             align-items: center;
             transition: background 0.2s;
             border: 1px solid rgba(0,48,73,0.1);
+            min-height: 50px;
         }
 
         .day-card.today .homework-item {
@@ -170,15 +172,20 @@
 
         .add-homework {
             width: 100%;
-            padding: 10px;
+            padding: 15px;
             background: rgba(102,155,188,0.1);
             border: 2px dashed #669bbc;
-            border-radius: 8px;
+            border-radius: 10px;
             cursor: pointer;
             color: #003049;
             transition: all 0.2s;
             text-align: center;
             font-weight: 500;
+            font-size: 1.1rem;
+            min-height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .add-homework:hover {
