--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
-            background: linear-gradient(135deg, #780000 0%, #c1121f 100%);
+            background: #1a1a1a;
             min-height: 100vh;
             padding: 20px;
         }
@@ -32,7 +32,7 @@
             color: #fdf0d5;
             font-size: 2.5rem;
             margin-bottom: 10px;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
         }
 
         .week-navigator {
@@ -51,14 +51,14 @@
             height: 40px;
             font-size: 1.2rem;
             cursor: pointer;
-            color: #003049;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+            color: #1a1a1a;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.5);
             transition: transform 0.2s, box-shadow 0.2s;
         }
 
         .week-navigator button:hover {
             transform: scale(1.1);
-            box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+            box-shadow: 0 4px 20px rgba(0,0,0,0.6);
             background: #669bbc;
             color: #fdf0d5;
         }
@@ -79,16 +79,17 @@
         }
 
         .day-card {
-            background: #fdf0d5;
+            background: #2d2d2d;
             border-radius: 15px;
             padding: 20px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
             transition: transform 0.3s, box-shadow 0.3s;
+            border: 1px solid #444;
         }
 
         .day-card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 15px 40px rgba(0,0,0,0.25);
+            box-shadow: 0 15px 40px rgba(0,0,0,0.6);
         }
 
         .day-card.today {
@@ -101,9 +102,9 @@
             font-size: 1.3rem;
             font-weight: 700;
             margin-bottom: 15px;
-            color: #003049;
+            color: #fdf0d5;
             padding-bottom: 10px;
-            border-bottom: 2px solid rgba(0,48,73,0.2);
+            border-bottom: 2px solid rgba(253,240,213,0.2);
         }
 
         .day-card.today .day-header {
@@ -123,8 +124,14 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            transition: background 0.2s;
-            border: 1px solid rgba(0,48,73,0.1);
+            transition: all 0.3s;
+            border: 1px solid rgba(102,155,188,0.2);
+        }
+
+        .homework-item.completed {
+            background: rgba(46, 160, 67, 0.2);
+            border-color: rgba(46, 160, 67, 0.4);
+            opacity: 0.7;
         }
 
         .day-card.today .homework-item {
@@ -132,21 +139,74 @@
             border-color: rgba(253,240,213,0.3);
         }
 
+        .day-card.today .homework-item.completed {
+            background: rgba(46, 160, 67, 0.3);
+            border-color: rgba(46, 160, 67, 0.5);
+        }
+
         .homework-item:hover {
             background: rgba(102,155,188,0.2);
+        }
+
+        .homework-item.completed:hover {
+            background: rgba(46, 160, 67, 0.3);
         }
 
         .day-card.today .homework-item:hover {
             background: rgba(253,240,213,0.3);
         }
 
+        .day-card.today .homework-item.completed:hover {
+            background: rgba(46, 160, 67, 0.4);
+        }
+
         .homework-text {
             flex: 1;
-            color: #003049;
+            color: #fdf0d5;
+        }
+
+        .homework-item.completed .homework-text {
+            text-decoration: line-through;
+            opacity: 0.7;
         }
 
         .day-card.today .homework-text {
             color: #fdf0d5;
+        }
+
+        .homework-buttons {
+            display: flex;
+            gap: 5px;
+            opacity: 0;
+            transition: opacity 0.2s;
+        }
+
+        .homework-item:hover .homework-buttons {
+            opacity: 1;
+        }
+
+        .tick-btn {
+            background: #2ea043;
+            color: #fdf0d5;
+            border: none;
+            border-radius: 5px;
+            padding: 5px 8px;
+            cursor: pointer;
+            font-size: 0.8rem;
+            transition: all 0.2s;
+        }
+
+        .tick-btn:hover {
+            background: #238636;
+            transform: scale(1.05);
+        }
+
+        .tick-btn.completed {
+            background: #656d76;
+        }
+
+        .tick-btn.completed:hover {
+            background: #848d97;
         }
 
         .delete-btn {
@@ -156,16 +216,12 @@
             border-radius: 5px;
             padding: 5px 10px;
             cursor: pointer;
-            opacity: 0;
-            transition: opacity 0.2s, background 0.2s;
-        }
-
-        .homework-item:hover .delete-btn {
-            opacity: 1;
+            transition: all 0.2s;
         }
 
         .delete-btn:hover {
             background: #780000;
+            transform: scale(1.05);
         }
 
         .add-homework {
@@ -175,7 +231,7 @@
             border: 2px dashed #669bbc;
             border-radius: 8px;
             cursor: pointer;
-            color: #003049;
+            color: #fdf0d5;
             transition: all 0.2s;
             text-align: center;
             font-weight: 500;
@@ -183,7 +239,7 @@
 
         .add-homework:hover {
             background: rgba(102,155,188,0.2);
-            border-color: #003049;
+            border-color: #fdf0d5;
         }
 
         .day-card.today .add-homework {
@@ -207,20 +263,20 @@
 
         .edit-btn, .lock-btn {
             background: #fdf0d5;
-            color: #003049;
+            color: #1a1a1a;
             border: none;
             border-radius: 25px;
             padding: 12px 25px;
             font-size: 0.95rem;
             font-weight: 600;
             cursor: pointer;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+            box-shadow: 0 4px 15px rgba(0,0,0,0.5);
             transition: all 0.3s;
         }
 
         .edit-btn:hover, .lock-btn:hover {
             transform: scale(1.05);
-            box-shadow: 0 6px 30px rgba(0,0,0,0.3);
+            box-shadow: 0 6px 30px rgba(0,0,0,0.6);
             background: #669bbc;
             color: #fdf0d5;
         }
@@ -242,7 +298,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: rgba(0,0,0,0.6);
+            background: rgba(0,0,0,0.8);
             justify-content: center;
             align-items: center;
             z-index: 1000;
@@ -253,17 +309,18 @@
         }
 
         .modal-content {
-            background: #fdf0d5;
+            background: #2d2d2d;
             border-radius: 15px;
             padding: 30px;
             min-width: 300px;
-            box-shadow: 0 20px 60px rgba(0,0,0,0.4);
+            box-shadow: 0 20px 60px rgba(0,0,0,0.8);
+            border: 1px solid #444;
         }
 
         .modal-title {
             font-size: 1.5rem;
             margin-bottom: 20px;
-            color: #003049;
+            color: #fdf0d5;
         }
 
         .modal input {
@@ -273,14 +330,14 @@
             border-radius: 8px;
             font-size: 1rem;
             margin-bottom: 15px;
-            background: rgba(102,155,188,0.05);
-            color: #003049;
+            background: #1a1a1a;
+            color: #fdf0d5;
         }
 
         .modal input:focus {
             outline: none;
-            border-color: #003049;
-            background: rgba(102,155,188,0.1);
+            border-color: #fdf0d5;
+            background: #333;
         }
 
         .modal-buttons {
@@ -299,12 +356,12 @@
         }
 
         .modal .confirm-btn {
-            background: #003049;
+            background: #669bbc;
             color: #fdf0d5;
         }
 
         .modal .confirm-btn:hover {
-            background: #669bbc;
+            background: #003049;
             transform: translateY(-2px);
         }
 
@@ -319,7 +376,7 @@
         }
 
         .no-homework {
-            color: #669bbc;
+            color: #888;
             font-style: italic;
             padding: 10px;
         }
@@ -392,7 +449,7 @@
 
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
-  import { getDatabase, ref, push, onValue, remove } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-database.js";
+  import { getDatabase, ref, push, onValue, remove, update } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-database.js";
 
   const firebaseConfig = {
     apiKey: "AIzaSyDs-4yX-jqxXgrVYL2lLcaY5K2GG_dkcmU",
@@ -488,7 +545,7 @@
             });
         }
 
-        // Load homework from Firebase - FIXED VERSION
+        // Load homework from Firebase - UPDATED VERSION with completion status
         function loadHomework(dateKey) {
             const homeworkRef = ref(database, `homework/${dateKey}`);
             onValue(homeworkRef, (snapshot) => {
@@ -500,13 +557,19 @@
                 
                 if (data && Object.keys(data).length > 0) {
                     Object.entries(data).forEach(([id, homework]) => {
+                        const isCompleted = homework.completed || false;
                         const li = document.createElement('li');
-                        li.className = 'homework-item';
+                        li.className = `homework-item ${isCompleted ? 'completed' : ''}`;
                         li.innerHTML = `
                             <div class="homework-text">
                                 <strong>${homework.subject}:</strong> ${homework.task}
                             </div>
-                            ${isEditMode ? `<button class="delete-btn" onclick="deleteHomework('${dateKey}', '${id}')">✕</button>` : ''}
+                            <div class="homework-buttons">
+                                <button class="tick-btn ${isCompleted ? 'completed' : ''}" onclick="toggleHomeworkCompletion('${dateKey}', '${id}', ${!isCompleted})">
+                                    ${isCompleted ? '↶' : '✓'}
+                                </button>
+                                ${isEditMode ? `<button class="delete-btn" onclick="deleteHomework('${dateKey}', '${id}')">✕</button>` : ''}
+                            </div>
                         `;
                         homeworkList.appendChild(li);
                     });
@@ -514,6 +577,12 @@
                     homeworkList.innerHTML = '<li class="no-homework">Ödev yok</li>';
                 }
             });
+        }
+
+        // Toggle homework completion status
+        window.toggleHomeworkCompletion = function(dateKey, homeworkId, completed) {
+            const homeworkRef = ref(database, `homework/${dateKey}/${homeworkId}`);
+            update(homeworkRef, { completed: completed });
         }
 
         // Change week
@@ -575,6 +644,7 @@
                 push(homeworkRef, {
                     subject: subject,
                     task: task,
+                    completed: false,
                     timestamp: Date.now()
                 });
                 closeHomeworkModal();
